deployments/resnet-minikube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: resnet-service
  namespace: default
spec:
  selector:
    k8s-app: resnet-app
  ports:
    - port: 8500
      targetPort: 8500
      name: grpc
